# kbase-jsonrpc11base

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
examples/database/: main.py
jsonrpc11base/: __init__.py  errors.py  main.py  method.py  service_description.py  types.py
jsonrpc11base/jsonrpc_schema/: jsonrpc11.json  request.json  response.json
jsonrpc11base/system_schema/: system.describe.result.json
jsonrpc11base/validation/: schema.py  validation.py
test/data/: service.json  test_schema copy.yaml  test_schema.json  test_server_error_traceback.example.txt  test_server_error_traceback.regex
test/data/schema/api/: method2.result.json
test/data/schema/test/: add.params.json  base.json  echo.params.json  finnish_hello.result.json  keyv.params.json  kwargs_subtract.params.json  kwargs_subtract.result.json  notification.params.json  posv.params.json  return_options_and_params.params.json  return_options_and_params.result.json  return_options_no_params.result.json  square.params.json  subtract.params.json
test/disabled/: test_jsonrpcbase_no_validation.py  test_jsonrpcbase_with_all_validation copy.py  test_jsonrpcbase_with_validation.py
test/specs/: test_api_errors.py  test_errors.py  test_jsonrpcbase_with_all_validation.py  test_jsonrpcbase_with_no_validation.py  test_main.py  test_schema.py  test_validation.py
