[tool.poetry]
name = "kbase-jsonrpc11base"
version = "0.1.4"
description = "Simple JSON-RPC 1.1 service without transport layer"
authors = []
license = "SEE LICENSE IN LICENSE.md"
readme = "README.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.7"
]
homepage = "https://github.com/kbaseIncubator/kbase-jsnorpc11base"
packages = [{ include = "jsonrpc11base" }]

[tool.poetry.dependencies]
python = "3.7"
jsonschema = "3.2.0"
pyyaml = "5.4.1"

[tool.poetry.dev-dependencies]
pytest-cov = "2.11.1"
flake8 = "3.8.4"
mypy = "0.812"
coverage = "5.5"
pytest = "6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
